# gameboy-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  debug.py  doctor_check.sh  doctor_test_suite  run.sh
src/: args.rs  binary.rs  constants.rs  flags.rs  instruction.rs  lib.rs  main.rs  memory.rs  memory_trait.rs  registers.rs  rom.rs  session.rs  timer.rs  utils.rs
src/apu/: mod.rs
src/cartridge/: cartridge.rs  error.rs  header.rs  loader.rs  mbc_trait.rs  mod.rs  rom.rs  validation.rs
src/cpu/: immediate.rs  instruction_set.rs  mod.rs  operand.rs  register.rs  snapshot.rs  step_flow_controller_enum.rs
src/cpu/alu/: alu_output.rs  alu_trait.rs  mod.rs
src/cpu/opcode/: flag_effect.rs  flags.rs  helpers.rs  mnemonic.rs  mod.rs  opcode.rs  opcode_loader.rs  (+1 more)
src/hardware/: mod.rs
src/input/: device_trait.rs  dummy.rs  mod.rs  rotary.rs
src/instructions/: code_table.rs  execute.rs  mod.rs  table.rs
src/mmu/: bus.rs  memory.rs  memory_trait.rs  mod.rs
src/opcodes/: condition.rs  flag_action.rs  flagspec.rs  instruction.rs  instruction_result.rs  mod.rs  opcode_info.rs  operand_value.rs  reg16.rs  reg8.rs  target.rs
src/ppu/: mod.rs
src/register/: mod.rs
src/rom/: error.rs  loader.rs  mod.rs  validation.rs
src/share/: mod.rs
src/testing/: doctor_session.rs  mod.rs
src/tests/: mod.rs
tests/: apu_tests.rs  bus_tests.rs  cpu_tests.rs  doctor_regressions.rs  ppu_tests.rs  serial_regression.rs
tests/common/: doctor_session.rs  mod.rs  ring_buffer_doctor.rs  ring_logger.rs  runtime_builder.rs  runtime_session.rs  serial_evaluator.rs
(+1 files in other folders)
