[package]
name = "gameboy_rs"
version = "0.3.0"
edition = "2024"
authors = ["Pontus Laestadius <pontus.laestadius@gmail.com>"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
simple-logging = "2.0.2"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1

