[package]
name = "gameboy_rs"
version = "0.3.0"
edition = "2024"
authors = ["Pontus Laestadius <pontus.laestadius@gmail.com>"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = { version = "0.4.29", features = ["release_max_level_info"] }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
glob = "0.3.3"

[dev-dependencies]
lazy_static = "1.5.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1

